# CUTFLOW

./: CHANGELOG.md  README.md  docker-compose.yml  task.md  turbo.json
apps/desktop/: Cargo.toml  installer.nsi
apps/desktop/src/: agents.rs  checkpoint.rs  ffmpeg.rs  gpu.rs  main.rs  ollama.rs  process_manager.rs  security.rs  system_info.rs
apps/web/: .env.example
apps/web/src/actions/: keybinding.ts  types.ts
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/changelog/: utils.ts
apps/web/src/db/: schema.ts
apps/web/src/env/: web.ts
apps/web/src/site/: brand.ts
apps/web/src/timeline/placement/__tests__/: resolve.test.ts
docs/: AGENT_ARCHITECTURE.md  FREE_AI_MODELS_GUIDE.md  MASTER_SETUP_GUIDE.md  PATREON_PAYPAL_SETUP.md
tlg3d-vibe-edit/: .env.example  .gitignore  COMPLETE_FEATURE_SUMMARY.md  DOCUMENTATION_INDEX.md  Dockerfile.api  Dockerfile.marketplace  Dockerfile.messaging  Dockerfile.video  FINAL_DELIVERY_SUMMARY.md  LAUNCH_CHECKLIST.md  PROJECT_STATUS.txt  README.md  docker-compose.yml  package.json  requirements.txt  tailwind.config.js
tlg3d-vibe-edit/.github/workflows/: build-release.yml  ci.yml
tlg3d-vibe-edit/apps/desktop-native/: index.html  package.json  tsconfig.json  vite.config.ts
tlg3d-vibe-edit/apps/desktop-native/src/: App.tsx  globals.css  main.tsx
tlg3d-vibe-edit/apps/desktop-native/src-tauri/: Cargo.toml  tauri.conf.json
tlg3d-vibe-edit/apps/desktop-native/src-tauri/src/: commands.rs  ffmpeg.rs  gpu.rs  main.rs  remote_sync.rs  system_info.rs  tray.rs
tlg3d-vibe-edit/apps/desktop-native/src/screens/: Dashboard.tsx  EditorView.tsx  MarketplaceView.tsx  MessagingView.tsx  ProjectsView.tsx  SettingsView.tsx  SetupWizardView.tsx
tlg3d-vibe-edit/apps/mobile/: app.json  eas.json  index.js  metro.config.js  package.json
tlg3d-vibe-edit/apps/mobile/android/: build.gradle  gradle.properties  settings.gradle
tlg3d-vibe-edit/apps/mobile/android/app/: build.gradle  proguard-rules.pro
tlg3d-vibe-edit/apps/mobile/ios/: Podfile
tlg3d-vibe-edit/apps/mobile/ios/TLG3D/: AppDelegate.swift  Info.plist  TLG3DBridge.m  TLG3DModule.swift
tlg3d-vibe-edit/apps/mobile/src/: App.tsx
tlg3d-vibe-edit/apps/mobile/src/screens/: AudioLibraryScreen.tsx  EditorScreen.tsx  HomeScreen.tsx  MarketplaceScreen.tsx  MessagingScreen.tsx  ProjectsScreen.tsx  RemoteScreen.tsx  SettingsScreen.tsx  SetupWizardScreen.tsx  SocialShareScreen.tsx
tlg3d-vibe-edit/docs/: LOCAL_MODELS_FEATURES.md  LOCAL_MODELS_SETUP.md  PROJECT_QUEUE_SYSTEM.md  QUICK_START.md  SETUP_AND_DEVELOPMENT.md  SETUP_WIZARD_GUIDE.md
(+11 files in other folders)
