[package]
name = "cutflow-desktop"
version = "1.0.0"
edition = "2021"
description = "CutFlow — Native AI-Powered Video Editor by SerThrocken (The Looking Glass 3D)"
authors = ["SerThrocken (TLG3D)"]

[[bin]]
name = "cutflow"
path = "src/main.rs"

[dependencies]
gpui = "0.2.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
sysinfo = "0.29"
which = "6"
futures-util = "0.3"
anyhow = "1"

