[package]
name = "cutflow"
version = "0.1.0"
description = "CutFlow — Native Desktop Application"
authors = ["The Looking Glass 3D <support@cutflow.dev>"]
license = "MIT"
repository = "https://github.com/serthrocken/cutflow"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cutflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "cutflow"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri           = { version = "2.0",  features = ["tray-icon", "image-png"] }
tauri-plugin-fs = { version = "2.0" }
tauri-plugin-shell       = { version = "2.0" }
tauri-plugin-notification = { version = "2.0" }
tauri-plugin-dialog      = { version = "2.0" }
tauri-plugin-process     = { version = "2.0" }
tauri-plugin-updater     = { version = "2.0" }
tauri-plugin-window-state = { version = "2.0" }

# Async runtime
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for API calls
reqwest = { version = "0.11", features = ["json", "multipart"] }

# File system operations
walkdir = "2"
tempfile = "3"

# Logging
log = "0.4"
tauri-plugin-log = { version = "2.0", features = ["colored"] }

# GPU detection
sysinfo = "0.29"
nvml-wrapper = { version = "0.9", optional = true }

# Process spawning (for FFmpeg, Ollama)
which = "4"

# WebSocket for remote sync
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"

# Encryption for stored credentials
aes-gcm = "0.10"
base64 = "0.21"

[features]
default     = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
nvidia-gpu  = ["nvml-wrapper"]

[profile.release]
panic   = "abort"
codegen-units = 1
lto     = true
opt-level = "s"
strip   = true
